--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,8 @@ div.main_header .inner_wrap div button {
 }
 
 div.main_header .inner_wrap div .btn-1 {
-  margin-right: 20px;
+  border-right:  1px solid gray;
+  height: 10px;
 }
 
 /* 맨 위 메 뉴 끝*/
