--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,20 @@
 @import url(./common.css);
 
 
+h2.title {
+  font-size: 44px;
+  font-weight: bold;
+  line-height: 58px;
+
+}
+
+p.title-subtext {
+  margin: 30px 0 0;
+  font-size: 16px;
+  color: #666;
+  line-height: 34px;
+}
+
 
 /* 헤 더 */
 
@@ -33,9 +47,6 @@ div.main_header .inner_wrap {
   display: flex;
   justify-content: space-between;
   height: 60px;
-
-
-
 }
 
 div.main_header .inner_wrap .img-log {
@@ -84,7 +95,8 @@ div.main_header .inner_wrap div button {
 }
 
 div.main_header .inner_wrap div .btn-1 {
-  margin-right: 20px;
+  border-right:  1px solid gray;
+  height: 15px;
 }
 
 /* 맨 위 메 뉴 끝*/
@@ -194,7 +206,7 @@ header .txt-wrap .btn-2:nth-child(5) {
 
 header .txt-wrap .btn-2:nth-child(6) {
   margin-left: 125px;
-  color: aqua;
+  color: rgb(0, 127, 168)
 }
 
 header .txt-wrap .play-btn {
@@ -266,17 +278,12 @@ header .txt-wrap .quick-menu2 button:last-child {
 
 .section-2 div.content_2 h2 {
   margin-top: 150px;
-  font-size: 33px;
-  font-weight: 700;
   text-align: center;
 }
 
 .section-2 div.content_2 p {
   margin-top: 30px;
-  color: gray;
   text-align: center;
-  font-size: 0.9em;
-  font-weight: 500;
 }
 
 .section-2 div.content_2 .model1 {
@@ -360,12 +367,407 @@ header .txt-wrap .quick-menu2 button:last-child {
 /* 세션 1 끝 */
 
 
+/* electric car start */
+section.wrap-ec {
+  /* border: 2px solid black; */
+  margin-top: 20px;
+  text-align: center;
+}
+
+section.wrap-ec .ec-body {
+  width: 80%;
+  height: 485px;
+  margin: 60px auto 0;
+  padding: 0 30px;
+}
+
+section.wrap-ec .ec-body .electric-car {
+  margin: 51px 0;
+  text-align: center;
+  font-size: 16px;
+  line-height: 1.5;
+  display: flex;
+  justify-content: center;
+}
+
+section.wrap-ec .ec-body .electric-car .ec-img {
+  width: 737.52px;
+  height: 485px;
+}
+
+section.wrap-ec .ec-body .electric-car .ec-img img {
+  width: 737.52px;
+  height: 485px;
+  object-fit: cover;
+  /* box-sizing: content-box; */
+}
+
+section.wrap-ec .ec-body .electric-car .ec-info {
+  width: 382.47px;
+  height: 485px;
+  display: flex;
+  /* justify-content: space-between; */
+  text-align: left;
+  background: #f7f3f2;
+  padding: 45px 60px 0;
+
+  flex-direction: column;
+  position: relative;
+}
+
+section.wrap-ec .ec-body .electric-car .ec-info .ec-inner{
+  box-sizing: border-box;
+}
+
+section.wrap-ec .ec-body .electric-car .ec-info .ec-inner .ec-badge {
+  background: #007fa8;
+  font-size: 11px;
+  color: #fff;
+  padding: 5px;
+  border: 1px solid #007fa8;
+  display: inline-block;
+  font-weight: 700;
+  letter-spacing: 0.02em;
+  line-height: 1;
+}
+
+section.wrap-ec .ec-body .electric-car .ec-info .ec-inner .ec-carname {
+  font-size: 28px;
+  font-weight: bold;
+  line-height: 44px;
+  margin: 8px 0 6px;
+}
+
+section.wrap-ec .ec-body .electric-car .ec-info .ec-inner .ec-subtext {
+  font-size: 15px;
+  line-height: 30px;
+  letter-spacing: -2px;
+  margin: 10px 0 0;
+  font-weight: bold;
+}
+
+section.wrap-ec .ec-body .electric-car .ec-info .ec-inner .ec-more {
+  margin-top: 30px;
+  width: auto;
+  font-size: 12px;
+  background: #022c5f;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  vertical-align: middle;
+  text-align: center;
+  padding: 10px 21px;
+  font-weight: 600;
+  letter-spacing: -1px;
+}
+
+/* section.wrap-ec .ec-body .electric-car .ec-info .ec-network {
+  /* margin-bottom: 35px; 
+} */
+
+section.wrap-ec .ec-body .electric-car .ec-info .ec-network .ec-network-header {
+  margin-top: 50px;
+  font-size: 20px;
+  font-weight: bold;
+  color: #000;
+  /* letter-spacing: -.24px; */
+  line-height: 34px;
+}
+
+section.wrap-ec .ec-body .electric-car .ec-info .ec-network .network-subtext {
+  color: #666;
+  font-size: 16px;
+  /* text-align: justify; */
+  line-height: 30px;
+  /* letter-spacing: -2px; */
+  margin: 0px 0px 12px 0px;
+  font-weight: bold;
+}
+
+section.wrap-ec .ec-body .electric-car .ec-info .ec-network .ec-link {
+  position: relative;
+  z-index: 1;
+  /* padding-top: 15px; */
+}
+
+section.wrap-ec .ec-body .electric-car .ec-info .ec-network .ec-link a {
+  color: #002c5f;
+  font-weight: bold;
+  font-size: 16px;
+  letter-spacing: -2px;
+  cursor: pointer;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+section.wrap-ec .ec-body .electric-car .ec-info .ec-network .ec-link a:last-child {
+  padding-left: 30px;
+}
+/* end electric car */
+
+
+/* trendy hyundai start */
+section.wrap-trendy {
+  padding-top: 140px;
+  text-align: center;
+}
+
+section.wrap-trendy .section-body {
+  width: 100%;
+  height: 445px;
+  margin: 60px auto 0;
+  padding: 0 30px;
+}
+
+section.wrap-trendy .section-body .trendy-hyundai {
+  display: flex;
+  justify-content: center;
+  /* border: 2px dashed red; */
+}
+
+section.wrap-trendy .section-body .trendy-hyundai .trendy-hyundai-info {
+  width: 382px;
+  height: 445px;
+  padding: 55px 60px 0 ;
+  background: #f6f3f2;
+  text-align: left;
+}
+
+section.wrap-trendy .section-body .trendy-hyundai .trendy-hyundai-info h3.title {
+  font-size: 30px;
+  font-weight: bold;
+  /* line-height: 44px; */
+}
+
+section.wrap-trendy .section-body .trendy-hyundai .trendy-hyundai-info h3.title span {
+  font-weight: 400;
+}
+
+section.wrap-trendy .section-body .trendy-hyundai .trendy-hyundai-info p.txt {
+  margin: 25px 0 0;
+  font-size: 14px;
+  line-height: 30px;
+  letter-spacing: -1px;
+  font-weight: 555;
+}
+
+section.wrap-trendy .section-body .trendy-hyundai .trendy-hyundai-info a {
+  width: 120px;
+  height: 40px;
+  margin: 55px 0 0;
+  font-size: 13px;
+  background: #002c5f;
+  font-weight: 555;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  vertical-align: middle;
+  text-align: center;
+  text-decoration: none;
+  padding: 15px 26px;
+  letter-spacing: -1px;
+  box-sizing: border-box;
+}
+
+section.wrap-trendy .section-body .trendy-hyundai .trendy-hyundai-img {
+  width: 738px;
+  height: 445px;
+}
+
+section.wrap-trendy .section-body .trendy-hyundai .trendy-hyundai-img img {
+  width: 738px;
+  height: 445px;
+  box-sizing: border-box;
+  vertical-align: top;
+}
+/* end trendy hyundai */
+
+
+/* 현대 shop contents start */
+section.wrap-shop {
+  padding-top: 140px;
+  text-align: center;
+}
+
+section.wrap-shop .section-body {
+  width: 1180px;
+  height: 533px;
+  margin: 60px auto 0;
+  padding: 0 30px;
+}
+
+section.wrap-shop .section-body ul.story-list {
+  /* border: 2px dashed red; */
+  display: flex;
+  /* flex-direction: row; */
+  justify-content: flex-end;
+  box-sizing: border-box;
+  margin: 51px 0 0;
+}
+
+section.wrap-shop .section-body ul.story-list li {
+  width: 352px;
+  height: 205px;
+  overflow: hidden;
+  position: relative;
+  margin: 0 0 0 32px;
+}
+section.wrap-shop .section-body ul.story-list li:first-child{
+  margin: 0;
+}
+
+section.wrap-shop .section-body ul.story-list li a {
+  display: block;
+  background: transparent;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+
+section.wrap-shop .section-body .story-list ul.story-list li a .img {
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
+section.wrap-shop .section-body ul.story-list li a .story-txt {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  padding: 9px 0 10px 20px;
+  background: rgba(0, 0, 0, .5);
+  font-size: 18px;
+  color: #fff;
+  letter-spacing: -2.9px;
+  font-weight: 700;
+  line-height: 30px;
+  text-align: left;
+}
+
+section.wrap-shop .section-body .shop-best-wrap {
+  /* border: 2px dashed red; */
+  display: flex;
+  max-height: 288px;
+  margin-top: 40px;
+  text-align: left;
+
+}
+section.wrap-shop .section-body .shop-best-wrap .view-more {
+  /* border: 2px dashed red; */
+  position: relative;
+  padding: 40px 30px 0;
+  width: 224px;
+  height: 288px;
+  background: #f6f3f2;
+}
+section.wrap-shop .section-body .shop-best-wrap .view-more h3.title {
+  font-size: 22px;
+  color: #000;
+  line-height: 26px;
+  font-weight: 600;
+}
+section.wrap-shop .section-body .shop-best-wrap .view-more h3.title a{
+  position: absolute;
+  top: 164px;
+  display: block;
+  width: auto;
+  height: auto;
+  background: transparent;
+  font-size: 15px;
+  font-weight: bold;
+  line-height: 30px;
+  color: #002c5f;
+}
+section.wrap-shop .section-body .shop-best-wrap .view-more .txt {
+  margin-top: 14px;
+  font-size: 15px;
+  line-height: 30px;
+  color: #666;
+}
+
+section.wrap-shop .section-body .shop-best-wrap ul.best-list {
+  /* border: 2px dashed red; */
+  display: flex;
+  width: 896px;
+  height: 288px;
+}
+section.wrap-shop .section-body .shop-best-wrap ul.best-list li {
+  width: 192px;
+  height: 288px;
+  margin-left: 32px;
+}
+section.wrap-shop .section-body .shop-best-wrap ul.best-list li a{
+  position: relative;
+  display: block;
+  text-align: left;
+  background: transparent;
+}
+section.wrap-shop .section-body .shop-best-wrap ul.best-list li a .ranking {
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 34px;
+  height: 34px;
+  background: #007fa8;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 34px;
+  color: #fff;
+  text-align: center;
+}
+section.wrap-shop .section-body .shop-best-wrap ul.best-list li a .list-img {
+  border: 1px solid #e5e5e5;
+  /* object-fit: fill; */
+  display: block;
+  box-sizing: border-box;
+}
+section.wrap-shop .section-body .shop-best-wrap ul.best-list li a .list-img img {
+  width: 192px;
+  height: 192px;
+  object-fit: cover;
+}
+section.wrap-shop .section-body .shop-best-wrap ul.best-list li a .productwrap {
+  box-sizing: border-box;
+}
+section.wrap-shop .section-body .shop-best-wrap ul.best-list li a .productwrap .product {
+  overflow: hidden;
+  margin: 12px 0 0;
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: -.4px;
+  color: #000;
+  line-height: 22px;
+  box-sizing: border-box;
+}
+section.wrap-shop .section-body .shop-best-wrap ul.best-list li a .productwrap .pricewrap{
+  display: flex;
+  margin: 4px 0 0;
+  font-size: 16px;
+  color: #000;
+  line-height: 26px;
+}
+section.wrap-shop .section-body .shop-best-wrap ul.best-list li a .productwrap .pricewrap .discount {
+  color: #e63312;
+  font-weight: bold;
+}
+section.wrap-shop .section-body .shop-best-wrap ul.best-list li a .productwrap .pricewrap .price {
+  font-weight: bold;
+}
+
+/* end 현대 shop */
+
+
+
+
 
 /* 세션 5 시작 */
 
 .section-5 {
   width: 100%;
   height: 722px;
+  margin-top: 200px;
 }
 
 .section-5 div.section-main5 {
@@ -375,17 +777,11 @@ header .txt-wrap .quick-menu2 button:last-child {
 }
 
 .section-5 div h2 {
-  font-size: 33px;
-  font-weight: 700;
   text-align: center;
-  margin-top: 0px;
 }
 
 .section-5 div p {
-  color: gray;
   text-align: center;
-  font-size: 0.9em;
-  font-weight: 500;
   margin-top: 30px;
 }
 
@@ -401,10 +797,6 @@ header .txt-wrap .quick-menu2 button:last-child {
   height: 399px;
   position: relative;
   overflow: hidden;
-}
-
-.section-5 .section-main5 div.section-brand button img {
-  width: 225px; height: 399px;
 }
 
 .section-5 .section-main5 div.section-brand button div {
@@ -423,6 +815,8 @@ header .txt-wrap .quick-menu2 button:last-child {
 
 .section-5 .section-main5 div.section-brand button::before {
   content: '';
+  width: 0;
+  height: 100%;
   background-color: rgba(5, 5, 5, 0.5);
   position: absolute;
   top: 0;
@@ -431,7 +825,7 @@ header .txt-wrap .quick-menu2 button:last-child {
 }
 
 .section-5 .section-main5 div.section-brand button:hover::before {
-  width: 100%; height: 100%;
+  width: 100%;
 }
 
 .section-5 .section-main5 div.section-brand button div p {
@@ -440,14 +834,20 @@ header .txt-wrap .quick-menu2 button:last-child {
   margin: 17px auto;
   color: #fff;
   font-weight: 600;
+  line-height: 25px;
 }
+.section-5 .section-main5 div.section-brand button div .section-brand-p1 {
+  font-size: 13px;
+}
+
 
 .section-5 .section-main5 div.section-brand button:hover div {
   opacity: 1;
 }
 
 .section-5 .section-main5 div.section-brand button img {
-  width: 100%;
+  width: 250px; height: 399px;
+  overflow: hidden;
 }
 
 .section-5 .section-main5 div.section-brand button:hover img {
@@ -460,29 +860,346 @@ header .txt-wrap .quick-menu2 button:last-child {
 /* 세션 5 끝 */
 
 
-/* 세션 2 전기차부분 */
+/* section .event */
 
-section.wrap-ec {
-  width: 100%; height: 800px;
-  border: 1px dashed red;
+section.event .inner {
+  margin: 50px auto;
+  width: 90%;
 }
 
-section.wrap-ec h2.ec-mainheader {
-  width: 100%;
-  border: 1px dashed red;
-  text-align: center;
-
-}
-
-section.wrap-ec p.ec-mainsubtext {
-  width: 100%;
-  border: 1px dashed black;
+section.event .inner h2 {
   text-align: center;
 }
-section.wrap-ec div.ec-body {
-  width: 80%; height: 70%;
-  border: 1px dashed green;
+
+section.event .inner>p {
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+section.event .inner ul {
+  display: flex;
+  justify-content: center;
+}
+
+section.event .inner ul li {
+  width: 30%;
+  margin: 0 20px;
+}
+
+section.event .inner ul li .img-box {
+  object-fit: cover;
+  position: relative;
+}
+
+section.event .inner ul li .img-box img {
+  width: 100%;
+}
+
+section.event .inner ul li .img-box::before {
+  content: '';
+  width: 0;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+section.event .inner ul li a:hover .img-box::before {
+  width: 100%;
+}
+
+section.event .inner ul li .img-box::after {
+  content: '자세히 보기 +';
+  position: absolute;
+  color: white;
+  top: 50%;
+  left: 50%;
+  font-weight: bold;
+  font-size: 20px;
+  transform: translate(-50%, -50%);
+  border-radius: 30px;
+  padding: 10px 30px;
+  opacity: 0;
+}
+
+section.event .inner ul li a:hover .img-box::after {
+  opacity: 1;
+}
+
+section.event .inner ul li h3 {
+  font-size: 22px;
+  font-weight: bold;
+  margin-top: 20px;
+
+}
+
+section.event .inner ul li p {
+  font-size: 15px;
+  margin-top: 20px;
+}
+
+section.event .inner div.bottom-button {
   margin: 0 auto;
+  text-align: center;
+  margin-top: 50px;
+}
+
+section.event .inner div.bottom-button .btn-2 {
+  color: rgb(0, 127, 168)
+}
+
+section.event .inner div.bottom-button .btn-2:nth-child(2) {
+  color: gray;
 }
 
 
+/* section .notice */
+
+section.notice .inner {
+  margin: 200px auto;
+  width: 60%;
+}
+
+section.notice .inner h2 {
+  text-align: center;
+}
+
+section.notice .inner .tab {
+  display: flex;
+  margin: 100px auto;
+  justify-content: space-around;
+  font-size: 14px;
+}
+
+section.notice .inner .tab li {
+  width: fit-content;
+  border: 1px solid white;
+  border-radius: 30px;
+  margin: 0, 5px;
+  background-color: rgba(0, 0, 0, 0.05);
+  padding: 8px;
+}
+
+section.notice .inner .tab li.active {
+  color: white;
+  background-color: rgb(51, 141, 194);
+}
+
+section.notice .inner ul {
+  display: flex;
+}
+
+section.notice .inner ul li {
+  width: 25%;
+  position: relative;
+}
+
+section.notice .inner ul li .img-box {
+  object-fit: cover;
+  overflow: hidden;
+  margin: 0.5%;
+  position: relative;
+}
+
+section.notice .inner ul li .img-box img {
+  height: 250px;
+  width: 100%;
+}
+
+section.notice .inner ul li a:hover .img-box img {
+  transition: 0.8s;
+  transform: scale(1.2);
+}
+
+section.notice .inner ul li .img-box::after {
+  content: '';
+  width: 0;
+  height: 100%;
+  background-color: rgba(22, 60, 104, 0.8);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+section.notice .inner ul li a:hover .img-box::after {
+  width: 100%;
+}
+
+section.notice .inner ul li h3 {
+  position: absolute;
+  color: white;
+  top: 50%;
+  left: 50%;
+  font-weight: bold;
+  font-size: 14px;
+  transform: translate(-50%, -50%);
+  border-radius: 0px;
+  opacity: 0;
+}
+
+section.notice .inner ul li span {
+  position: absolute;
+  right: 10%;
+  bottom: 10%;
+  opacity: 0;
+}
+
+section.notice .inner ul li a:hover h3 {
+  opacity: 1;
+}
+
+section.notice .inner ul li a:hover span {
+  opacity: 1;
+}
+
+section.notice .inner ul li p {
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  color: white;
+  font-weight: bold;
+  font-size: 13px;
+  border-radius: 50px;
+  padding: 10px 20px;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+section.notice .inner ul li a:hover p {
+  border: 2px solid white;
+}
+
+/* section .information */
+section.information {
+  margin-top: 50px;
+  padding-top: 30px;
+  font-weight: bold;
+  background-color: #f6f3f2;
+  ;
+}
+
+section.information .inner {
+  border: 2px solid #f0e1dd;
+  margin: 0 380px -50px;
+  padding: 30px 30px 80px 50px;
+  background-color: white;
+  border-radius: 30px;
+  font-size: 14px;
+}
+
+section.information .inner h2 {
+  font-size: 15px;
+  margin: 10px auto;
+}
+
+section.information .inner h3 {
+  font-size: 15px;
+  margin-top: 30px;
+  margin-bottom: 15px;
+  color: darkblue;
+}
+
+section.information .inner ul {
+  display: flex;
+  justify-content: space-around;
+}
+
+section.information .inner ul li {
+  width: 30%;
+}
+
+section.information .inner ul li ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+}
+
+section.information .inner ul li ul li {
+  width: 50%;
+  font-size: 12px;
+  line-height: 2;
+}
+
+section.information .inner ul li ul li i {
+  margin-left: 5px;
+  font-size: 10px;
+}
+
+
+/* footer */
+
+footer {
+  background-color: rgb(28, 27, 27);
+  color: #aaa;
+}
+
+footer .inner {
+  width: 60%;
+  margin: 0 auto;
+  padding: 30px 20px;
+  font-size: 13px;
+}
+
+footer .inner ul.footer1 {
+  display: flex;
+  justify-content: start;
+}
+
+
+footer .inner ul.footer1 li ul {
+  display: flex;
+  line-height: 3;
+}
+
+footer .inner ul.footer1 li ul li {
+  margin-right: 30px;
+}
+
+footer .inner ul.footer1 li ul li span {
+  color: white;
+}
+
+footer .inner ul li.logo {
+  padding-right: 70px;
+  padding-top: 20px;
+}
+
+footer .inner ul li p {
+  font-size: 11px;
+  padding-top: 10px;
+}
+
+footer .inner ul li.link {
+  margin-left: 120px;
+}
+
+
+footer hr {
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
+
+footer .inner ul.footer2 {
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: first baseline;
+}
+
+footer .inner ul.footer2 li {
+  display: flex;
+  width: 25%;
+  height: 50%;
+  font-size: 11px;
+  line-height: 1.5;
+  align-items: flex-start;
+  padding: 5px;
+}
+
+footer .inner ul.footer2 li img {
+  object-fit: contain;
+  width: 15%;
+  margin-top: 10px;
+  margin-right: 5px;
+}
